--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -200,6 +200,8 @@ en:
       footer: This project will belong to you. You can transfer this project to other contacts at any time.
       limited: "As a free account, you can only upload up to 50 Mb of attachments to this project."
       upgrade: Upgrade your account now!
+      created: Your project has been created!
+      invalid_project: "Invalid project, correct errors and try again."
     edit:
       submit: Save Changes
   invitations:
@@ -498,13 +500,35 @@ en:
       nobody_watching: "Nobody is watching"
       started_watching: "You will now be notified by email of updates."
       stopped_watching: "You will no longer receive notifications for this item."
+
   date:
     yesterday: Yesterday
     formats: 
-      default: ""
-      long: ""
-      short: ""
-    order: [ :day, :month, :year ]    
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
+    order: [ :day, :month, :year ]
+
+    day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
+    abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
+
+    month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
+    abbr_month_names: [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
+    order: [ :year, :month, :day ]
+
+  time:
+    formats:
+      default: "%a, %d %b %Y %H:%M:%S %z"
+      short: "%d %b %H:%M"
+      long: "%B %d, %Y %H:%M"
+    am: "am"
+    pm: "pm"
+
+  support:
+    array:
+      words_connector: ", "
+      two_words_connector: " and "
+      last_word_connector: ", and "
 
   emailer:
     common: 
