refactored gannt chart, refactored code into temporary helper modules, protected all project views base on views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -406,11 +406,13 @@ en:
     fields:
       role: Role
       observer: Observer
+      commenter: Commenter
       participant: Particpant
       admin: Admin
-    person:
+    header:
       owner: Project Owner
       observer: Observer
+      commenter: Commenter
       participant: Particpant
       admin: Admin      
       remove: Remove
