--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -592,6 +592,7 @@ es:
       reply: "También puedes contestar a este email para publicar una respuesta."
       are_watching: " están suscritos a la conversación, y serán notificados de las respuestas futuras."
       notification_settings: "Puedes <a href='{{stop_watching_url}}'>dejar de seguir esta conversación</a> en cualquier momento."
+      comment: "Comentario en la pared del proyecto: "
       conversation: "Conversación:"
       task: "Tarea:"
       task_list: "Lista de tareas:"
