--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,7 +87,14 @@ en:
       first_day_of_week: Week starts on
       change_password: Change password
       confirm_password: Confirm password
-      use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."
+      use_this_email: "You have invitations to share projects for this email address. If you want to access these projects, don't change this email address. You can change your email address once you've completed the signup process."      
+      notify_mentions: "Notify me when I'm mentioned eg. Howdy @{{login}}! You'll recieve an email!"
+      notify_conversations: Notify me when I'm watching a conversation
+      notify_task_lists: Notify me when I'm watching a task list
+      notify_tasks: Notify me when I'm watching a task
+      avatar:
+        presence: "You can't upload a blank file"
+        max_size: "File size can't exceed {{mb}}"
       tooltips:
         login: "You need a username to login. People will be able to find you by username. Must be all lowercase, no spaces. You can use undescores."
         first_name: Up to 20 characters.
@@ -105,6 +112,7 @@ en:
       title_settings: Your Account Settings
       title_profile: Your Profile Settings
       title_picture: Your Profile Picture
+      title_notifications: Your Notifications
       submit: Update account
     update:
       updated: User profile updated!
